--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.4",
+    "react-uuid": "^1.0.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
